--- a/index.html
+++ b/index.html
@@ -30,9 +30,20 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-block">
+        <div class ="col-md-1 p-0">
+          <div class ="hour"><p>9AM</p></div>
+        </div>
+        <div class ="col-md-9 description p-0">
+          <textarea class="past">asdfds</textarea>
+        </div>
+        <div class ="col-md-1 p-0">
+          <button class="saveBtn"><i class = "fas fa-save"></i></button>
+        </div>
+      </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/script/script.js"></script>
   </body>
