Created function to append time block section to container in index.HTML by manipulating the DOM with jQuery.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <!-- Remove this commented out code before submitting. It is for reference for my container layout. -->
+      <!-- <div class="row time-block">
         <div class ="col-md-1 p-0">
           <div class ="hour"><p>9AM</p></div>
         </div>
@@ -40,7 +41,7 @@
         <div class ="col-md-1 p-0">
           <button class="saveBtn"><i class = "fas fa-save"></i></button>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
