--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+    
+      <!-- Timeblocks will be dynamically added here via the script.js page, by using DOM manipulation using jQuery -->
 
     </div>
 
